# integration

./: Exported_Contacts_68f84abbcd975a2793d84358_ALL.csv  Guild-Back-End.txt  README.md  api-botspace.txt  get-all-agents 3.json  get-all-agents.json  package.json  pyproject.toml
docs/: instrumentation-plan.md
src/: contextBuilder.js  crmAuthorization.js  handoff.js  index.js  openai-step-response-schema.json  openai-step.js  workflow.js
src/botspace_crm_integration/: __init__.py  service.py
test/: contextBuilder.test.js  crmAuthorization.test.js  openai-step.test.js  workflow.test.js
tests/: test_service.py
